[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Allen Chen <allen.chen@hiero7.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework-jwt = "^1.11.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
